--- a/index.css
+++ b/index.css
@@ -1,7 +1,8 @@
 .logo{
-    width: 100px;
-    height: 40px;  
+    width: 50px;
+    height: 50px;
     margin-top: 14px;
+    border-radius: 20px;
     }
     .header{
       display: flex;
