--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+@media (prefers-color-scheme: dark) {
+    body{
+        background-color: #000;
+        color: #fff;
+    }
+}
+@media (prefers-color-scheme: light)
+{
+    body{
+        background-color: #ffffff;
+        color: #000000;
+    }
+}
+
 .icon{
     width: 50px;
     height: 50px;
@@ -16,4 +30,14 @@
     color: black;
     list-style: none;
     padding: 10px;
+}
+html
+{
+    margin: 0;
+    padding: 0;
+}
+body
+{
+    margin: 0;
+    padding: 0;
 }
