--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 @media (prefers-color-scheme: light)
 {
     body{
-        background-color: #ffffff;
-        color: #000000;
+        background-color: #fff;
+        color: #000;
     }
 }
 
