--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@
     }
 }
 
+body
+{
+    margin: 0;
+    padding: 0;
+}
+
 .icon{
     width: 50px;
     height: 50px;
@@ -27,17 +33,22 @@
 }
 .menu
 {
-    color: black;
     list-style: none;
+    padding-right: 10px;
+}
+.menu li
+{
+    border-radius: 30%;
     padding: 10px;
+    background-color: #0be40b;
 }
-html
+.menu li a
 {
-    margin: 0;
-    padding: 0;
+    color: #000;
 }
-body
+.code
 {
-    margin: 0;
-    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
