--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body
 }
 .menu li
 {
-    border-radius: 30%;
+    border-radius: 15px;
     padding: 10px;
     margin-right: 5px;
     margin-left: 5px;
