--- a/style.css
+++ b/style.css
@@ -65,4 +65,13 @@ body
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+}
+.button
+{
+    width: 100px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
